# OOP-Lab-2

./: .gitignore  CMakeLists.txt  README.md
include/: three.h
src/: main.cpp  three.cpp
test/: tester.cpp
